[gd_scene load_steps=5 format=3 uid="uid://klppck1h68c8"]

[ext_resource type="PackedScene" uid="uid://dygcn4t50yioi" path="res://Scenes/NFSGP_PauseMenu.tscn" id="1_nnv6h"]
[ext_resource type="Script" path="res://Scripts/NFSGP_HUD.gd" id="1_r37uw"]
[ext_resource type="PackedScene" uid="uid://bno4np3epotxv" path="res://JSKdebugUI/JSKdebugUiNode2D.tscn" id="1_xkfwg"]
[ext_resource type="Theme" uid="uid://b3rvrrbcdp8u5" path="res://Assets/Themes/NFStheme.tres" id="2_xdpj5"]

[node name="NFSGP_HUD" type="Node3D"]
script = ExtResource("1_r37uw")

[node name="NFSGP_PauseMenu" parent="." instance=ExtResource("1_nnv6h")]
visible = false

[node name="SapphireControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
metadata/_edit_lock_ = true

[node name="JSKdebugUiNode2D" parent="SapphireControl" instance=ExtResource("1_xkfwg")]
visible = false
position = Vector2(-6, 63)

[node name="ColorRectBk" type="ColorRect" parent="SapphireControl"]
modulate = Color(1, 1, 1, 0.780392)
layout_mode = 0
offset_top = 5.0
offset_right = 1280.0
offset_bottom = 74.0
color = Color(0.111928, 0.228478, 0.559416, 0.913725)

[node name="LapTimeLbl" type="Label" parent="SapphireControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0101562
anchor_top = -0.00138889
anchor_right = 0.028125
anchor_bottom = -0.00138889
offset_left = 12.0
offset_top = 10.0
offset_right = 109.0
offset_bottom = 47.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 24
text = "0:06.00"
metadata/_edit_use_anchors_ = true

[node name="LapNumLbl" type="Label" parent="SapphireControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0078125
anchor_top = -0.00694444
anchor_right = 0.138
anchor_bottom = 0.122
offset_left = 6.0
offset_top = 42.0
offset_right = -139.64
offset_bottom = -13.84
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 24
text = "2/2 Laps"
metadata/_edit_use_anchors_ = true

[node name="SpeedLbl" type="Label" parent="SapphireControl"]
layout_mode = 0
offset_left = 265.0
offset_top = 15.0
offset_right = 344.0
offset_bottom = 48.0
theme = ExtResource("2_xdpj5")
text = "143"
horizontal_alignment = 2

[node name="SpeedTxtLbl" type="Label" parent="SapphireControl"]
layout_mode = 0
offset_left = 356.0
offset_top = 15.0
offset_right = 516.0
offset_bottom = 48.0
theme = ExtResource("2_xdpj5")
text = "MPH"

[node name="TransmissionGear" type="Node2D" parent="SapphireControl"]

[node name="GearsFullTextLbl" type="Label" parent="SapphireControl/TransmissionGear"]
visible = false
offset_left = 231.0
offset_top = 51.0
offset_right = 484.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "N    1    2    3    4    5    6    R"

[node name="GearNeutralLbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 231.0
offset_top = 51.0
offset_right = 246.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "N"
horizontal_alignment = 1

[node name="Gear1Lbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 262.0
offset_top = 51.0
offset_right = 277.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1

[node name="Gear2Lbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 293.0
offset_top = 51.0
offset_right = 308.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "2"
horizontal_alignment = 1

[node name="Gear3Lbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 328.0
offset_top = 51.0
offset_right = 343.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "3"
horizontal_alignment = 1

[node name="Gear4Lbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 363.0
offset_top = 51.0
offset_right = 378.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "4"
horizontal_alignment = 1

[node name="Gear5Lbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 398.0
offset_top = 51.0
offset_right = 413.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "5"
horizontal_alignment = 1

[node name="Gear6Lbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 434.0
offset_top = 51.0
offset_right = 449.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "6"
horizontal_alignment = 1

[node name="GearReverseLbl" type="Label" parent="SapphireControl/TransmissionGear"]
offset_left = 470.0
offset_top = 51.0
offset_right = 485.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "R"
horizontal_alignment = 1

[node name="RPMbigLbl" type="Label" parent="SapphireControl"]
layout_mode = 0
offset_left = 835.0
offset_top = 20.0
offset_right = 909.0
offset_bottom = 52.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 30
text = "6.5"
horizontal_alignment = 2

[node name="RPMtxtLbl" type="Label" parent="SapphireControl"]
layout_mode = 0
offset_left = 917.0
offset_top = 20.0
offset_right = 1001.0
offset_bottom = 52.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 30
text = "RPM"

[node name="RPMsmallLbl" type="Label" parent="SapphireControl"]
layout_mode = 0
offset_left = 932.0
offset_top = 47.0
offset_right = 995.0
offset_bottom = 64.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 16
text = "x1000"

[node name="LapRecordLbl" type="Label" parent="SapphireControl"]
layout_mode = 0
offset_left = 1123.0
offset_top = 14.0
offset_right = 1226.0
offset_bottom = 39.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 24
text = "1:30.07"

[node name="PositionLbl" type="Label" parent="SapphireControl"]
layout_mode = 0
offset_left = 1072.0
offset_top = 43.0
offset_right = 1256.0
offset_bottom = 68.0
theme = ExtResource("2_xdpj5")
theme_override_font_sizes/font_size = 24
text = "Lap Record"
